; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mig_reply_port.c_mig_get_reply_port.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mig_reply_port.c_mig_get_reply_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_PORT_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mig_get_reply_port() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @_mig_get_reply_port()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @MACH_PORT_NULL, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = call i64 (...) @mach_reply_port()
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @_mig_set_reply_port(i64 %8)
  br label %10

10:                                               ; preds = %6, %0
  %11 = load i64, i64* %1, align 8
  ret i64 %11
}

declare dso_local i64 @_mig_get_reply_port(...) #1

declare dso_local i64 @mach_reply_port(...) #1

declare dso_local i32 @_mig_set_reply_port(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
